--- a/test.html
+++ b/test.html
@@ -6,14 +6,14 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>TEST</title>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-<link rel="stylesheet" href="css/style.css">
-<script src="js/main.js"></script>
+<link rel="stylesheet" href="../css/style.css">
+<script src="../js/main.js"></script>
 </head>
 <body> 
   <nav class="navbar navbar-expand-lg bg-white">
     <div class="container">
-    <a class="navbar-brand1" href="#"><img  src="img/p_icon.ico"/></a> 
-    <a href="file:///C:/Users/BESHO/Desktop/file/test2.html">
+    <a class="navbar-brand1" href="#"><img  src="../img/p_icon.ico"/></a> 
+    <a href="file:///C:/Users/BESHO/Desktop/file/profile page/test2.html">
       <button type="button" class="btn btn-link">Language</button>
     </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -33,7 +33,7 @@
         </ul>
       </div> 
       <a class="navbar-brand2 ms-auto" href="#">
-        <img src="img/team1.jpg" alt="george" width="50" height="50">
+        <img src="../img/team1.jpg" alt="george" width="50" height="50">
       </a>
     </div>
    
@@ -48,7 +48,7 @@
     </div>
 <header>    
     <div class="ssk_info" >
-    <img src="img/2.jpeg" alt="personal_photo" title="george haleem"/> 
+    <img src="../img/2.jpeg" alt="personal_photo" title="george haleem"/> 
     <br>
     <h3>Selvana Samuel</h3>
     <h6>Technical Manager</h6>
