--- a/test.html
+++ b/test.html
@@ -33,7 +33,7 @@
         </ul>
       </div> 
       <a class="navbar-brand2 ms-auto" href="#">
-        <img src="../img/team1.jpg" alt="george" width="50" height="50">
+        <img src="../img/team1.jpg" alt="selvana" width="50" height="50">
       </a>
     </div>
    
