change img title

--- a/test.html
+++ b/test.html
@@ -48,7 +48,7 @@
     </div>
 <header>    
     <div class="ssk_info" >
-    <img src="../img/2.jpeg" alt="personal_photo" title="george haleem"/> 
+    <img src="../img/2.jpeg" alt="personal_photo" title="selvana samuel"/> 
     <br>
     <h3>Selvana Samuel</h3>
     <h6>Technical Manager</h6>
